--- a/client/client.html
+++ b/client/client.html
@@ -1,33 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Our simple HTTP server</title>
-  <link rel="stylesheet" type="text/css" href="/style.css">
-  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-  <script type="text/babel">
+  <head>
+    <title>Our simple HTTP server</title>
+    <link rel="stylesheet" type="text/css" href="/style.css" />
 
-  </script>
-</head>
-<body>
-  <section id="top">
-    <h3>Status Code Tests</h3>
-    <select id="page">
-      <option value="/success">Success</option>
-      <option value="/badRequest">Bad Request</option>
-      <option value="/unauthorized">Unauthorized</option>
-      <option value="/forbidden">Forbidden</option>
-      <option value="/internal">Internal</option>
-      <option value="/notImplemented">Not Implemented</option>
-      <option value="/notFound">Not Found</option>
-    </select>
-    <select id="type">
-      <option value="application/json">JSON</option>
-      <option value="text/xml">XML</option>
-    </select>
-    <button id="send">Send</button>
-  </section>
-  <section id="content">
-  </section>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+    <script type="text/babel">
+      const handleResponse = (xhr) =>{
+        const type = xhr.getResponseHeader('content-type');
+
+        const content = document.querySelector("#content");
+
+        switch(xhr.status){
+          case 200:
+            content.innerHTML = `<b>Message: Successfull response</b>`;
+            break;
+          case 400:
+            content.innerHTML = `<b>Missing valid query parameter set to true</b>`;
+        }
+      };
+
+      const sendAjax = (url,acceptedType) =>{
+
+        const xhr = new XMLHttpRequest();
+
+        xhr.open('GET',url.value);
+
+        console.log(acceptedType.value+"");
+        xhr.setRequestHeader("Accept",acceptedType.value);
+
+        xhr.onload = () => handleResponse(xhr);
+
+        xhr.send();
+      };
+
+      const init = () => {
+        const sendButton = document.querySelector("#send");
+        const typeOption = document.querySelector("#type");
+        const pageOption = document.querySelector('#page');
+
+        const sendRequest = () => sendAjax(pageOption,typeOption);
+
+        sendButton.addEventListener('click',sendRequest);
+      };
+
+      window.onload = init;
+    </script>
+  </head>
+  <body>
+    <section id="top">
+      <h3>Status Code Tests</h3>
+      <select id="page">
+        <option value="/success">Success</option>
+        <option value="/badRequest">Bad Request</option>
+        <option value="/unauthorized">Unauthorized</option>
+        <option value="/forbidden">Forbidden</option>
+        <option value="/internal">Internal</option>
+        <option value="/notImplemented">Not Implemented</option>
+        <option value="/notFound">Not Found</option>
+      </select>
+      <select id="type">
+        <option value="application/json">JSON</option>
+        <option value="text/xml">XML</option>
+      </select>
+      <button id="send">Send</button>
+    </section>
+    <section id="content"></section>
+  </body>
 </html>
